TASK: Split Neos.NodeTypes.Mixins to a dedicated package

--- a/Neos.NodeTypes/composer.json
+++ b/Neos.NodeTypes/composer.json
@@ -5,6 +5,7 @@
     "license": "GPL-3.0+",
     "require": {
         "neos/form": "*",
+        "neos/nodetypes-mixins": "self.version",
 
         "neos/media": "self.version",
         "neos/content-repository": "self.version",
