--- a/Neos.NodeTypes/composer.json
+++ b/Neos.NodeTypes/composer.json
@@ -6,6 +6,7 @@
     "require": {
         "neos/form": "*",
 
+        "neos/nodetypes-headline": "self.version",
         "neos/media": "self.version",
         "neos/content-repository": "self.version",
         "neos/neos": "self.version",
