BUGFIX: Correctly require a stable version of neos/imagine
The ``neos/image`` version should be a stable version. Additionally
corrects the ``PHP`` version requirement to 7.0 an higher.

--- a/Neos.Media/composer.json
+++ b/Neos.Media/composer.json
@@ -4,7 +4,7 @@
     "description": "The Media package",
     "license": "GPL-3.0+",
     "require": {
-        "neos/imagine": "*",
+        "neos/imagine": "~3.0",
 
         "neos/flow": "*",
         "neos/cache": "*",
