--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,12 @@
         "doctrine/orm": "~2.5.0",
         "gedmo/doctrine-extensions": "~2.3.0",
         "behat/transliterator": "~1.0",
-        "php": ">=5.5.0",
+        "php": ">=7.0.0",
         "neos/utility-unicode": "*",
         "neos/utility-mediatypes": "*",
         "neos/error-messages": "*",
         "doctrine/common": "~2.7.0",
-        "neos/imagine": "*",
+        "neos/imagine": "~3.0",
         "imagine/imagine": "*",
         "doctrine/dbal": "~2.5.0",
         "neos/party": "~4.0",
