--- a/Neos.Media/composer.json
+++ b/Neos.Media/composer.json
@@ -4,7 +4,7 @@
     "description": "The Media package",
     "license": "GPL-3.0+",
     "require": {
-        "neos/imagine": "~3.0",
+        "neos/imagine": "^3.0.2",
 
         "neos/flow": "*",
         "neos/cache": "*",
