--- a/Neos.NodeTypes.ContentReferences/composer.json
+++ b/Neos.NodeTypes.ContentReferences/composer.json
@@ -8,7 +8,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Neos\\ContentReferences\\": "Classes"
+            "Neos\\NodeTypes\\ContentReferences\\": "Classes"
         }
     },
     "extra": {
