FEATURE: Refactored node type Html into separate package

--- a/Neos.NodeTypes/Configuration/NodeTypes.Content.yaml
+++ b/Neos.NodeTypes/Configuration/NodeTypes.Content.yaml
@@ -35,31 +35,13 @@
     icon: 'icon-picture'
     position: 400
 
+# To prevent any breaking change, we map the separate package the old NodeTypes package
 'Neos.NodeTypes:Html':
   superTypes:
-    'Neos.Neos:Content': TRUE
-  ui:
-    label: i18n
-    icon: 'icon-code'
-    position: 500
-    inspector:
-      groups:
-        html:
-          label: i18n
-          icon: 'icon-code'
-          position: 10
-  properties:
-    source:
-      type: string
-      defaultValue: '<p>Enter HTML here</p>'
-      ui:
-        label: i18n
-        reloadIfChanged: TRUE
-        inspector:
-          group: 'html'
-          editor: 'Neos.Neos/Inspector/Editors/CodeEditor'
-          editorOptions:
-            buttonLabel: i18n
+    'Neos.NodeTypes.Html:Html': TRUE
+
+'Neos.NodeTypes.Html:Html':
+  abstract: true
 
 'Neos.NodeTypes:Menu':
   superTypes:
