--- a/Neos.NodeTypes.Html/composer.json
+++ b/Neos.NodeTypes.Html/composer.json
@@ -1,25 +1,14 @@
 {
-    "name": "neos/nodetypes",
+    "name": "neos/nodetypes-html",
     "type": "neos-package",
-    "description": "Node type configuration for Neos",
+    "description": "A simple html node type.",
     "license": "GPL-3.0+",
     "require": {
-        "neos/form": "*",
-
-        "neos/media": "self.version",
-        "neos/content-repository": "self.version",
-        "neos/neos": "self.version",
-        "neos/fusion": "self.version",
-
-        "neos/nodetypes-contentreference": "self.version",
-        "neos/nodetypes-html": "self.version"
-    },
-    "replace": {
-        "typo3/neos-nodetypes": "self.version"
+        "neos/neos": "*"
     },
     "autoload": {
         "psr-4": {
-            "Neos\\NodeTypes\\": "Classes"
+            "Neos\\NodeTypes\\Html\\": "Classes"
         }
     },
     "extra": {
