--- a/Neos.NodeTypes/Configuration/NodeTypes.Content.yaml
+++ b/Neos.NodeTypes/Configuration/NodeTypes.Content.yaml
@@ -274,27 +274,13 @@
             placeholder: i18n
             dataSourceIdentifier: 'neos-nodetypes-form-definitions'
 
+# To prevent any breaking change, we map the separate package the old NodeTypes package
 'Neos.NodeTypes:AssetList':
   superTypes:
-    'Neos.Neos:Content': TRUE
-  ui:
-    label: i18n
-    icon: 'icon-files-o'
-    position: 700
-    inspector:
-      groups:
-        resources:
-          label: i18n
-          position: 5
-          icon: 'icon-files-o'
-  properties:
-    assets:
-      type: array<Neos\Media\Domain\Model\Asset>
-      ui:
-        inspector:
-          group: 'resources'
-        label: i18n
-        reloadIfChanged: TRUE
+    'Neos.NodeTypes.AssetList:AssetList': TRUE
+
+'Neos.NodeTypes.AssetList:AssetList':
+  abstract: true
 
 # To prevent any breaking change, we map the separate package the old NodeTypes package
 'Neos.NodeTypes:ContentReferences':
