FEATURE: Separated form node type into a separate package

--- a/Neos.NodeTypes/Configuration/NodeTypes.Content.Overrides.yaml
+++ b/Neos.NodeTypes/Configuration/NodeTypes.Content.Overrides.yaml
@@ -19,6 +19,15 @@
   abstract: TRUE
 
 
+# Neos.NodeTypes.Form
+'Neos.NodeTypes:Form':
+  superTypes:
+    'Neos.NodeTypes.Form:Form': TRUE
+
+'Neos.NodeTypes.Form:Form':
+  abstract: TRUE
+
+
 # Neos.NodeTypes.Html
 'Neos.NodeTypes:Html':
   superTypes:
