--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         "neos/site-kickstarter": "self.version",
         "neos/nodetypes-assetlist": "self.version",
         "neos/nodetypes-basemixins": "self.version",
+        "neos/nodetypes-form": "self.version",
         "neos/nodetypes-columnlayouts": "self.version",
         "neos/nodetypes-contentreferences": "self.version",
         "neos/nodetypes-html": "self.version",
@@ -87,6 +88,9 @@
             ],
             "Neos\\NodeTypes\\BaseMixins\\": [
                 "Neos.NodeTypes.BaseMixins/Classes"
+            ],
+            "Neos\\NodeTypes\\Form\\": [
+                "Neos.NodeTypes.Form/Classes"
             ],
             "Neos\\NodeTypes\\ColumnLayouts\\": [
                 "Neos.NodeTypes.ColumnLayouts/Classes"
