--- a/apigen.yml
+++ b/apigen.yml
@@ -1,7 +1,7 @@
 # folder inside repository, branch, title - adjust per branch!
-branch: 'master'
-docs-path: 'neos/master'
-title: 'Neos (master branch)'
+branch: '3.2'
+docs-path: 'neos/3.2'
+title: 'Neos (3.2 branch)'
 
 # some project specific settings
 docs-repository: 'neos/neos.github.io'
