--- a/Neos.ContentGraph.DoctrineDbalAdapter/composer.json
+++ b/Neos.ContentGraph.DoctrineDbalAdapter/composer.json
@@ -4,7 +4,7 @@
   "description": "The Doctrine DBAL database backend for the Neos content graph",
   "license": "GPL-3.0+",
   "require": {
-    "neos/contentgraph": "*",
+    "neos/content-repository": "*",
     "doctrine/dbal": "~2.5.0",
     "doctrine/migrations": "~1.3.0"
   },
