Task: Have basic pre events-sourced Behat scenario running
Tests/Behavior/Features/Basic/DefaultNodeValues.feature works!!!

--- a/Neos.ContentRepository/Configuration/NodeTypes.yaml
+++ b/Neos.ContentRepository/Configuration/NodeTypes.yaml
@@ -1,9 +1,14 @@
 #                                                                        #
-# ContentRepository Node Types                                                     #
+# ContentRepository Node Types                                           #
 #                                                                        #
+
+'Neos.ContentRepository:Root':
+  constraints:
+    nodeTypes:
+      '*': true
 
 'unstructured':
   abstract: false
   constraints:
     nodeTypes:
-      '*': TRUE
+      '*': true
