--- a/Neos.Media.Browser/Configuration/Settings.yaml
+++ b/Neos.Media.Browser/Configuration/Settings.yaml
@@ -14,6 +14,7 @@ Neos:
         - 'resource://Neos.Twitter.Bootstrap/Public/2/js/bootstrap.min.js'
         - 'resource://Neos.Neos/Public/Library/bootstrap-components.js'
         - 'resource://Neos.Media.Browser/Public/JavaScript/media-browser.js'
+        - 'resource://Neos.Media.Browser/Public/JavaScript/pdf.min.js'
       styles:
         - 'resource://Neos.Neos/Public/Styles/Neos.css'
         - 'resource://Neos.Media.Browser/Public/Styles/MediaBrowser.css'
