--- a/Neos.SiteKickstarter/composer.json
+++ b/Neos.SiteKickstarter/composer.json
@@ -7,7 +7,7 @@
         "neos/flow": "*",
         "neos/utility-files": "*",
         "neos/fluid-adaptor": "*",
-        "neos/kickstarter": "~4.2.0",
+        "neos/kickstarter": "*",
 
         "neos/content-repository": "self.version"
     },
