--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "GPL-3.0+",
     "type": "neos-package-collection",
     "require": {
-        "neos/flow-development-collection": "~4.2.0",
+        "neos/flow-development-collection": "dev-master",
         "neos/flow": "*",
         "neos/cache": "*",
         "neos/eel": "*",
@@ -23,11 +23,11 @@
         "neos/imagine": "^3.0.2",
         "imagine/imagine": "*",
         "doctrine/dbal": "~2.5.0",
-        "neos/party": "~4.0",
-        "neos/setup": "~4.0",
-        "neos/twitter-bootstrap": "~3.0",
+        "neos/party": "*",
+        "neos/setup": "*",
+        "neos/twitter-bootstrap": "*",
         "neos/form": "*",
-        "neos/kickstarter": "~4.2.0"
+        "neos/kickstarter": "*"
     },
     "replace": {
         "typo3/typo3cr": "self.version",
