--- a/Neos.Fusion.Afx/Configuration/Settings.yaml
+++ b/Neos.Fusion.Afx/Configuration/Settings.yaml
@@ -1,4 +1,4 @@
 Neos:
   Fusion:
     dsl:
-      afx: PackageFactory\AtomicFusion\AFX\Dsl\AfxDslImplementation
+      afx: Neos\Fusion\Afx\Dsl\AfxDslImplementation
