--- a/Neos.Fusion.Afx/composer.json
+++ b/Neos.Fusion.Afx/composer.json
@@ -1,40 +1,31 @@
 {
-    "name": "packagefactory/atomicfusion-afx",
+    "name": "neos/fusion-afx",
     "description": "JSX inspired compact syntax for Neos.Fusion",
     "type": "neos-package",
     "license": "GPL-3.0",
-    "authors": [
-        {
-            "name": "Martin Ficzel",
-            "email": "martin.ficzel@gmx.de",
-            "role": "Developer"
-        },
-        {
-            "name": "Wilhelm Behncke",
-            "email": "wilhelm.behncke@googlemail.com",
-            "role": "Developer"
-        }
-    ],
+    "replace": {
+      "packagefactory/atomicfusion-afx": "*"
+    },
     "require": {
         "neos/fusion": "^3.2.0 || dev-master",
         "packagefactory/afx": "~2.0.1"
     },
     "require-dev": {
-      "phpunit/phpunit": "~4.8 || ~5.4.0"
+      "phpunit/phpunit": "~6.0.0"
     },
     "autoload": {
         "psr-4": {
-            "PackageFactory\\AtomicFusion\\AFX\\": "Classes/"
+            "Neos\\AFX\\": "Classes/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-          "PackageFactory\\AtomicFusion\\AFX\\Tests\\": "Tests/"
+          "Neos\\AFX\\Tests\\": "Tests/"
         }
     },
     "extra": {
         "neos": {
-            "package-key": "PackageFactory.AtomicFusion.AFX"
+            "package-key": "Neos.Fusion.Afx"
         }
     },
     "scripts": {
