TASK: Correct namespace in composer.json

--- a/Neos.Fusion.Afx/composer.json
+++ b/Neos.Fusion.Afx/composer.json
@@ -15,12 +15,12 @@
     },
     "autoload": {
         "psr-4": {
-            "Neos\\AFX\\": "Classes/"
+            "Neos\\Fusion\\Afx\\": "Classes/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-          "Neos\\AFX\\Tests\\": "Tests/"
+          "Neos\\Fusion\\Afx\\Tests\\": "Tests/"
         }
     },
     "extra": {
