--- a/Neos.NodeTypes.AssetList/Configuration/NodeTypes.Content.AssetList.yaml
+++ b/Neos.NodeTypes.AssetList/Configuration/NodeTypes.Content.AssetList.yaml
@@ -1,6 +1,6 @@
 'Neos.NodeTypes.AssetList:AssetList':
   superTypes:
-    'Neos.Neos:Content': TRUE
+    'Neos.Neos:Content': true
   ui:
     label: i18n
     icon: 'icon-files-o'
@@ -18,4 +18,4 @@
         inspector:
           group: 'resources'
         label: i18n
-        reloadIfChanged: TRUE
+        reloadIfChanged: true
