--- a/Neos.NodeTypes.ColumnLayouts/Configuration/NodeTypes.Content.TwoColumn.yaml
+++ b/Neos.NodeTypes.ColumnLayouts/Configuration/NodeTypes.Content.TwoColumn.yaml
@@ -1,6 +1,6 @@
 'Neos.NodeTypes.ColumnLayouts:TwoColumn':
   superTypes:
-    'Neos.NodeTypes.ColumnLayouts:Column': TRUE
+    'Neos.NodeTypes.ColumnLayouts:Column': true
   ui:
     label: i18n
     position: 200
@@ -13,7 +13,7 @@
     layout:
       defaultValue: '50-50'
       ui:
-        reloadIfChanged: TRUE
+        reloadIfChanged: true
         inspector:
           editorOptions:
             values:
