--- a/Neos.NodeTypes.Form/Configuration/NodeTypes.Content.Form.yaml
+++ b/Neos.NodeTypes.Form/Configuration/NodeTypes.Content.Form.yaml
@@ -1,6 +1,6 @@
 'Neos.NodeTypes.Form:Form':
   superTypes:
-    'Neos.Neos:Content': TRUE
+    'Neos.Neos:Content': true
   ui:
     label: i18n
     icon: 'icon-envelope-alt'
@@ -16,7 +16,7 @@
       type: string
       ui:
         label: i18n
-        reloadIfChanged: TRUE
+        reloadIfChanged: true
         inspector:
           group: form
           editor: 'Neos.Neos/Inspector/Editors/SelectBoxEditor'
