--- a/Neos.NodeTypes/Configuration/NodeTypes.Content.Headline.yaml
+++ b/Neos.NodeTypes/Configuration/NodeTypes.Content.Headline.yaml
@@ -1,7 +1,7 @@
 'Neos.NodeTypes:Headline':
   superTypes:
-    'Neos.Neos:Content': TRUE
-    'Neos.NodeTypes:TitleMixin': TRUE
+    'Neos.Neos:Content': true
+    'Neos.NodeTypes:TitleMixin': true
   ui:
     label: i18n
     icon: 'icon-header'
