--- a/Neos.NodeTypes/Configuration/NodeTypes.Content.Image.yaml
+++ b/Neos.NodeTypes/Configuration/NodeTypes.Content.Image.yaml
@@ -1,7 +1,7 @@
 'Neos.NodeTypes:Image':
   superTypes:
-    'Neos.Neos:Content': TRUE
-    'Neos.NodeTypes:ContentImageMixin': TRUE
+    'Neos.Neos:Content': true
+    'Neos.NodeTypes:ContentImageMixin': true
   ui:
     label: i18n
     icon: 'icon-picture'
