--- a/Neos.NodeTypes/Configuration/NodeTypes.Content.Overrides.yaml
+++ b/Neos.NodeTypes/Configuration/NodeTypes.Content.Overrides.yaml
@@ -4,77 +4,77 @@
 # Neos.NodeTypes.AssetList
 'Neos.NodeTypes:AssetList':
   superTypes:
-    'Neos.NodeTypes.AssetList:AssetList': TRUE
+    'Neos.NodeTypes.AssetList:AssetList': true
 
 'Neos.NodeTypes.AssetList:AssetList':
-  abstract: TRUE
+  abstract: true
 
 
 # Neos.NodeTypes.ContentReferences
 'Neos.NodeTypes:ContentReferences':
   superTypes:
-    'Neos.NodeTypes.ContentReferences:ContentReferences': TRUE
+    'Neos.NodeTypes.ContentReferences:ContentReferences': true
 
 'Neos.NodeTypes.ContentReferences:ContentReferences':
-  abstract: TRUE
+  abstract: true
 
 
 # Neos.NodeTypes.Form
 'Neos.NodeTypes:Form':
   superTypes:
-    'Neos.NodeTypes.Form:Form': TRUE
+    'Neos.NodeTypes.Form:Form': true
 
 'Neos.NodeTypes.Form:Form':
-  abstract: TRUE
+  abstract: true
 
 
 # Neos.NodeTypes.Html
 'Neos.NodeTypes:Html':
   superTypes:
-    'Neos.NodeTypes.Html:Html': TRUE
+    'Neos.NodeTypes.Html:Html': true
 
 'Neos.NodeTypes.Html:Html':
-  abstract: TRUE
+  abstract: true
 
 
 # Neos.NodeTypes.Navigation
 'Neos.NodeTypes:Menu':
   superTypes:
-    'Neos.NodeTypes.Navigation:Navigation': TRUE
+    'Neos.NodeTypes.Navigation:Navigation': true
 
 'Neos.NodeTypes.Navigation:Navigation':
-  abstract: TRUE
+  abstract: true
 
 
 # Neos.NodeTypes.ColumnLayouts
 'Neos.NodeTypes:Column':
   superTypes:
-    'Neos.NodeTypes.ColumnLayouts:Column': TRUE
+    'Neos.NodeTypes.ColumnLayouts:Column': true
 
 'Neos.NodeTypes:TwoColumn':
   superTypes:
-    'Neos.NodeTypes.ColumnLayouts:TwoColumn': TRUE
+    'Neos.NodeTypes.ColumnLayouts:TwoColumn': true
 
 'Neos.NodeTypes.ColumnLayouts:TwoColumn':
-  abstract: TRUE
+  abstract: true
 
 'Neos.NodeTypes:ThreeColumn':
   superTypes:
-    'Neos.NodeTypes.ColumnLayouts:ThreeColumn': TRUE
+    'Neos.NodeTypes.ColumnLayouts:ThreeColumn': true
 
 'Neos.NodeTypes.ColumnLayouts:ThreeColumn':
-  abstract: TRUE
+  abstract: true
 
 'Neos.NodeTypes:FourColumn':
   superTypes:
-    'Neos.NodeTypes.ColumnLayouts:FourColumn': TRUE
+    'Neos.NodeTypes.ColumnLayouts:FourColumn': true
 
 'Neos.NodeTypes.ColumnLayouts:FourColumn':
-  abstract: TRUE
+  abstract: true
 
 
 # DEPRECATED with Neos 1.2: This node type was renamed to "Neos.NodeTypes:ContentReferences"
 'Neos.NodeTypes:Records':
   superTypes:
-    'Neos.NodeTypes:ContentReferences': TRUE
-  abstract: TRUE
+    'Neos.NodeTypes:ContentReferences': true
+  abstract: true
