--- a/Neos.NodeTypes/Configuration/NodeTypes.Content.Text.yaml
+++ b/Neos.NodeTypes/Configuration/NodeTypes.Content.Text.yaml
@@ -1,7 +1,7 @@
 'Neos.NodeTypes:Text':
   superTypes:
-    'Neos.Neos:Content': TRUE
-    'Neos.NodeTypes:TextMixin': TRUE
+    'Neos.Neos:Content': true
+    'Neos.NodeTypes:TextMixin': true
   ui:
     label: i18n
     icon: 'icon-file-text'
