--- a/Neos.NodeTypes/Configuration/NodeTypes.Content.TextWithImage.yaml
+++ b/Neos.NodeTypes/Configuration/NodeTypes.Content.TextWithImage.yaml
@@ -1,8 +1,8 @@
 'Neos.NodeTypes:TextWithImage':
   superTypes:
-    'Neos.Neos:Content': TRUE
-    'Neos.NodeTypes:TextMixin': TRUE
-    'Neos.NodeTypes:ContentImageMixin': TRUE
+    'Neos.Neos:Content': true
+    'Neos.NodeTypes:TextMixin': true
+    'Neos.NodeTypes:ContentImageMixin': true
   ui:
     label: i18n
     icon: 'icon-picture'
