WIP: Replace ContentDimensionPresetDetector with an HTTP component with detector subcomponents

--- a/Neos.Neos/Configuration/Settings.yaml
+++ b/Neos.Neos/Configuration/Settings.yaml
@@ -378,6 +378,13 @@ Neos:
       applicationPackageKey: Neos.Neos
       applicationName: Neos
 
+    http:
+      chain:
+        preprocess:
+          chain:
+            detectContentSubgraph:
+              component: Neos\Neos\Http\DetectContentSubgraphComponent
+
     mvc:
       routes:
         'Neos.Neos':
