Respect custom dimension resolution URI path segment delimiter in ContentSubgraph detection component
Also respect autogenerated offset

--- a/Neos.Neos/Configuration/Settings.yaml
+++ b/Neos.Neos/Configuration/Settings.yaml
@@ -32,7 +32,7 @@ Neos:
         Neos.Neos: true
 
     contentDimensions:
-      detection:
+      resolution:
         uriPathSegmentDelimiter: '_'
 
     # If a node name is specified here it will be used as default siteNode
