TASK: Update .travis.yml, apigen.yml and conf.py

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ cache:
 before_install:
   - phpenv config-rm xdebug.ini
   - export NEOS_TARGET_REPOSITORY=neos/neos-development-collection
-  - export NEOS_TARGET_VERSION=master
+  - export NEOS_TARGET_VERSION=3.3
   - env
   - sudo add-apt-repository ppa:git-core/ppa -y
   - sudo apt-get update
