--- a/Neos.NodeTypes.AssetList/composer.json
+++ b/Neos.NodeTypes.AssetList/composer.json
@@ -4,7 +4,8 @@
     "description": "A simple asset list node type.",
     "license": "GPL-3.0+",
     "require": {
-        "neos/neos": "*"
+        "neos/neos": "*",
+        "neos/nodetypes-basemixins": "*"
     },
     "autoload": {
         "psr-4": {
