--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "GPL-3.0+",
     "type": "neos-package-collection",
     "require": {
-        "neos/flow-development-collection": "~4.2.0 || 4.2.x-dev",
+        "neos/flow-development-collection": "~4.2.0",
         "neos/flow": "*",
         "neos/cache": "*",
         "neos/eel": "*",
