TASK: Set all dependencies from Flow to dev-master

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "neos/setup": "*",
         "neos/twitter-bootstrap": "*",
         "neos/form": "*",
-        "neos/kickstarter": "~4.3.0"
+        "neos/kickstarter": "*"
     },
     "replace": {
         "typo3/typo3cr": "self.version",
