--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,14 @@
         "doctrine/orm": "~2.5.0",
         "gedmo/doctrine-extensions": "~2.4.0",
         "behat/transliterator": "~1.0",
-        "php": ">=5.5.0",
+        "php": "~7.1",
         "neos/utility-unicode": "*",
         "neos/utility-mediatypes": "*",
         "neos/error-messages": "*",
         "doctrine/common": "~2.7.0",
         "neos/imagine": "^3.0.2",
         "imagine/imagine": "*",
-        "doctrine/dbal": "~2.5.0",
+        "doctrine/dbal": "~2.6.0",
         "neos/party": "*",
         "neos/setup": "*",
         "neos/twitter-bootstrap": "*",
