FEATURE: WIP: Introduce new building blocks for initialization up to the inter dimensional variation graph
Provides implementations for
* ContentDimensions with identifiers, values and variations
* ContentDimensionValues with specialization depth and constraints
* ContentDimensionSourceInterface with a concrete ConfigurationBasedContentDimensionSource which supports the new declaration format
* ContentDimensionZookeeper

which replace
* The old ContentDimension model
* ContentDimensionRepository
* ContentDimensionPresetSourceInterface and the concrete ConfigurationContentDimensionPresetSource
* ContentDimensionCombinator
* IntraDimensionalFallbackGraph

Also all occurrences of "fallback" and "variant" have been replaced by "generalization" and "specialization"

--- a/Neos.ContentRepository/Configuration/Objects.yaml
+++ b/Neos.ContentRepository/Configuration/Objects.yaml
@@ -12,6 +12,8 @@
       setting: 'Neos.ContentRepository.contentDimensions'
 'Neos\ContentRepository\Domain\Service\ContentDimensionPresetSourceInterface':
   className: Neos\ContentRepository\Domain\Service\ConfigurationContentDimensionPresetSource
+'Neos\ContentRepository\Domain\Context\Dimension\ContentDimensionSourceInterface':
+  className: Neos\ContentRepository\Domain\Context\Dimension\ConfigurationBasedContentDimensionSource
 'Neos\ContentRepository\Domain\Model\NodeLabelGeneratorInterface':
   className: Neos\ContentRepository\Domain\Model\ExpressionBasedNodeLabelGenerator
 'Neos\ContentRepository\Domain\Service\NodeServiceInterface':
