--- a/TYPO3.Neos.Kickstarter/composer.json
+++ b/TYPO3.Neos.Kickstarter/composer.json
@@ -2,7 +2,7 @@
     "name": "typo3/neos-kickstarter",
     "type": "typo3-flow-package",
     "description": "A simple generator for Neos assets, like sites and plugins.",
-    "license": "GPL-3.0+",
+    "license": ["GPL-3.0-or-later"],
     "require": {
         "typo3/neos": "*",
         "typo3/kickstart": "~3.3.0",
