--- a/Neos.Neos/Configuration/NodeTypes.yaml
+++ b/Neos.Neos/Configuration/NodeTypes.yaml
@@ -34,18 +34,18 @@
           group: 'nodeInfo'
           view: 'Neos.Neos/Inspector/Views/NodeInfoView'
   properties:
-    _removed:
-      type: boolean
-    _creationDateTime:
-      type: DateTime
-    _lastModificationDateTime:
-      type: DateTime
-    _lastPublicationDateTime:
-      type: DateTime
-    _path:
-      type: string
-    _name:
-      type: string
+#    _removed:
+#      type: boolean
+#    _creationDateTime:
+#      type: DateTime
+#    _lastModificationDateTime:
+#      type: DateTime
+#    _lastPublicationDateTime:
+#      type: DateTime
+#    _path:
+#      type: string
+#    _name:
+#      type: string
     _nodeType:
       type: string
       ui:
@@ -92,29 +92,30 @@
           icon: 'icon-eye'
           position: 100
           tab: meta
-  properties:
-    _hiddenBeforeDateTime:
-      type: DateTime
-      ui:
-        label: i18n
-        inspector:
-          group: 'visibility'
-          position: 10
-          editorOptions:
-            format: 'd-m-Y H:i'
-      validation:
-        'Neos.Neos/Validation/DateTimeValidator': []
-    _hiddenAfterDateTime:
-      type: DateTime
-      ui:
-        label: i18n
-        inspector:
-          group: 'visibility'
-          position: 20
-          editorOptions:
-            format: 'd-m-Y H:i'
-      validation:
-        'Neos.Neos/Validation/DateTimeValidator': []
+  properties: []
+# TODO: enable again!
+#    _hiddenBeforeDateTime:
+#      type: DateTime
+#      ui:
+#        label: i18n
+#        inspector:
+#          group: 'visibility'
+#          position: 10
+#          editorOptions:
+#            format: 'd-m-Y H:i'
+#      validation:
+#        'Neos.Neos/Validation/DateTimeValidator': []
+#    _hiddenAfterDateTime:
+#      type: DateTime
+#      ui:
+#        label: i18n
+#        inspector:
+#          group: 'visibility'
+#          position: 20
+#          editorOptions:
+#            format: 'd-m-Y H:i'
+#      validation:
+#        'Neos.Neos/Validation/DateTimeValidator': []
 
 # Abstract Document type.
 # "Documents" always have a publicly-visible URL.
@@ -179,14 +180,14 @@
     _hidden:
       ui:
         reloadPageIfChanged: TRUE
-    _hiddenInIndex:
-      type: boolean
-      ui:
-        label: i18n
-        reloadPageIfChanged: TRUE
-        inspector:
-          group: 'visibility'
-          position: 40
+#    _hiddenInIndex:
+#      type: boolean
+#      ui:
+#        label: i18n
+#        reloadPageIfChanged: TRUE
+#        inspector:
+#          group: 'visibility'
+#          position: 40
 
 'Neos.Neos:Site':
   superTypes:
