--- a/Neos.Media.Browser/package.json
+++ b/Neos.Media.Browser/package.json
@@ -6,12 +6,14 @@
     "grunt-cli": "~0.1.13"
   },
   "dependencies": {
-    "grunt": "~0.4.5",
+    "grunt": "^0.4.5",
     "grunt-bg-shell": "~2.0.1",
+    "grunt-cli": "^1.2.0",
     "grunt-contrib-compass": "~0.9.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-watch": "~0.4.0",
-    "matchdep": "^0.3.0"
+    "matchdep": "^0.3.0",
+    "npm": "^5.8.0"
   },
   "devDependencies": {
     "grunt-contrib-cssmin": "^1.0.2"
