TASK: Add auto generated document node type to nodetypes configuration and site export

--- a/Neos.SiteKickstarter/Resources/Private/Generator/Configuration/NodeTypes.yaml
+++ b/Neos.SiteKickstarter/Resources/Private/Generator/Configuration/NodeTypes.yaml
@@ -6,3 +6,7 @@
 #  childNodes:
 #    'sidebar':
 #      type: 'Neos.Neos:ContentCollection'
+
+'{packageKey}:DefaultPage':
+  superTypes:
+    'Neos.Neos:Document': true
