Enable async thumbnails by default; fix Postgresql migration

--- a/Neos.Media/Configuration/Settings.yaml
+++ b/Neos.Media/Configuration/Settings.yaml
@@ -51,7 +51,7 @@ Neos:
 
   Media:
     # Enable asynchronous thumbnails
-    asyncThumbnails: false
+    asyncThumbnails: true
     # Thumbnail presets
     thumbnailPresets: {  }
     # Automatically create thumbnails for configured presets when assets are added
